# CG2Ex

./: CMakeLists.txt
cmake/: FindGLFW.cmake
common/: CMakeLists.txt  Cube.cpp  Cube.h  Cylinder.cpp  Cylinder.h  Icosahedron.cpp  Icosahedron.h  Plane.cpp  Plane.h  common.cpp  common.h
e2task1/: CMakeLists.txt  e2task1.cpp  e2task1.frag  e2task1.h  e2task1.vert  main.cpp
e2task2/: CMakeLists.txt  e2task2.cpp  e2task2.frag  e2task2.h  e2task2.vert  height.512.512.r.f.raw  main.cpp
e2task3/: CMakeLists.txt  e2task3.cpp  e2task3.geom  e2task3.h
e2task4/: CMakeLists.txt  cat.128.128.astc4x4.raw  cat.128.128.dxt1.raw  cat.128.128.etc2.raw  cat.128.128.rgba.ub.raw  e2task4.cpp  e2task4.frag  e2task4.h  e2task4.vert  main.cpp  test.16.16.astc4x4.raw  test.16.16.dxt1.raw  test.16.16.etc2.raw  test.16.16.rgba.ub.raw
